# full-pipeline

./: .pre-commit-config.yaml  messy.py  pyproject.toml  setup.md
.github/workflows/: ci.yml
data/: .gitignore  sampleEntry.csv
tests/: test_pipeline.py
